--- a/OKHttps/OkhttpTest/app/src/main/res/layout/activity_okhttp.xml
+++ b/OKHttps/OkhttpTest/app/src/main/res/layout/activity_okhttp.xml
@@ -39,6 +39,33 @@
         android:layout_height="wrap_content"
         android:text="使用okhttp-utils的下载大文件" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btn_pause_download"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="暂停下载" />
+
+        <Button
+            android:id="@+id/btn_continue_download"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="继续下载" />
+
+        <Button
+            android:id="@+id/btn_cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="取消下载" />
+    </LinearLayout>
+
     <Button
         android:id="@+id/btn_uploadfile"
         android:layout_width="match_parent"
